move frequentist result to suppl

--- a/Notebook_Pos_Self_Salience_APA.rmd
+++ b/Notebook_Pos_Self_Salience_APA.rmd
@@ -1,5 +1,5 @@
 ---
-title             : "Positivity bias in perceptual matching may reflect a spontaneous self-referential processing"
+title             : "Good-self based social categorization in perceptual matching"
 shorttitle        : "Positivity as spontaneous self-referential processing"
 
 author: 
@@ -31,7 +31,7 @@ authornote: |
   Authors contriubtion: HCP, JS, & KP design the study, HCP collected the data, HCP analyzed the data and drafted the manuscript. KP & JS supported this project.
 
 abstract: |
-  To navigate in a complex social world, individual has learnt to prioritize valuable information. Previous studies suggested the moral related stimuli was prioritized [@gantman_moral_2014;@anderson_visual_2011]. Using social associative learning paradigm (self-tagging paradigm), we found that when geometric shapes, without soical meaning, were associated with different moral valence (morally good, neutral, or bad), the shapes that associated with positive moral valence were prioritized in a perceptual matching task. This patterns of results were robust across different procedures. Further, we tested whether this positivity effect was modulated by self-relevance by manipulating the self-relevance explicitly and found that this moral positivity effect was strong when the moral valence is describing onself, but only weak evidence that such effect occured when the moral valence was describing others. We further found that this effect exist even when the self-relevance or the moral valence were presented as a task-irrelevant information, though the effect size become smaller. We also tested whether the positivity effect only exist in moral domain and found that this effect was not limited to moral domain. Exploratory analyses on task-questionnaire relationship found that moral self-image score (how closely one feel they are to the ideal moral image of themselves) is positively correlated to the *d'* of morally positive condition in singal detection and the drift rate using DDM, while the self-esteem is negatively correlated with *d'* of neutral and morally negative conditions. These results suggest that the positive self prioritzation in perceptual decision-making may reflect ...
+  Morality is central to social life. To navigate in a complex social world, individual has to evaluate others' moral character and keep a positive moral self-view. Though moral character in person perception and moral self-enhancement had been extensively studied, the perceptual process of moral character is unkonwn. Using social associative learning paradigm (self-tagging paradigm), participant learned the concept of moral character and visual cues (shapes) and then perform a perceptual matching task. The results showed that when geometric shapes, without soical meaning, that associated with good moral character were prioritized. This patterns of results were robust when we change different semantic words or using behiavioral history as an proxy of mroal character. Also, this patterns were robust across different procedures. We then examined two competing explanation for this effect: value-based prioritization or social-categorization based prioritization. We manipulated the identity of different moral character explicitly and found that the good moral character effect was strong when for the self condition but not for other condition. We further tested the good-self based social categorization by presenting the identity or moral character information as task-irrelevant stimuli, so that we can distinguish between the unique good-self hypothesis and a more general good-person based social categorization hypothesis. The evidence suggested that human are more likely has a good-person based categorization instead of a unique good-self. Finally, we explored whether the positivity effect only exist in moral domain and found that this effect was not limited to moral domain but also aesthetic domain, but not affective valence *per se*. Exploratory analyses on task-questionnaire relationship found that there are weak correlation between self-bad distance and behavioral pattern. These results suggest that there exist a social categorization in perceptual decision-making, which is based on personal traits (moral character) but not affective valence.
   
   <!-- https://tinyurl.com/ybremelq -->
   
